--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "@calcom/embed-react": "^1.5.0",
     "cmdk": "^1.1.1",
     "cra-template": "1.2.0",
     "date-fns": "^3.6.0",
