--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -62,7 +63,39 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
+    "postbuild": "react-snap",
     "test": "craco test"
+  },
+  "reactSnap": {
+    "source": "build",
+    "minifyHtml": {
+      "collapseWhitespace": true,
+      "removeComments": true
+    },
+    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"],
+    "skipThirdPartyRequests": true,
+    "include": [
+      "/",
+      "/services",
+      "/services/claim-readiness-review",
+      "/services/independent-medical-opinion-nexus-letter",
+      "/services/disability-benefits-questionnaire-dbq",
+      "/services/aid-and-attendance",
+      "/services/va-medical-malpractice-1151-case",
+      "/services/cp-coaching",
+      "/blog",
+      "/community",
+      "/case-studies",
+      "/forms",
+      "/intake",
+      "/diagnostic",
+      "/claim-readiness-review",
+      "/contact",
+      "/about",
+      "/terms",
+      "/privacy",
+      "/disclaimer"
+    ]
   },
   "browserslist": {
     "production": [
