--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
       "removeComments": true
     },
     "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox", "--disable-dev-shm-usage"],
+    "puppeteerExecutablePath": "/usr/bin/chromium-browser",
     "skipThirdPartyRequests": true,
     "include": [
       "/",
