--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,6 @@
 {
     "buildCommand": "npm install && npm run build",
-    "outputDirectory": ".next",
+    "outputDirectory": "build",
     "devCommand": "npm run dev",
     "installCommand": "npm install",
     "framework": "nextjs",
